# tome-mcp

./: .gitignore  CHANGELOG.md  README.md  ingest_test_ground_truth.md  pyproject.toml
.github/workflows/: ci.yml
.windsurf/rules/: bibliography-management.md  git-workflow.md  notes-convention.md  source-figures.md
.windsurf/workflows/: smoke-test.md
docs/: smoke-test.md  tome-archive-v1.md
examples/: config.yaml  tome-deepcite.sty
patches/: PR_DESCRIPTION.md  README.md  mcp_stdio_nonblocking.py  stdio-nonblocking.patch
scripts/: backfill_embeddings.py  quarantine_bad_keys.py  scan_vault.py
sections/: intro.tex
specs/: get_quote-spec.md
src/tome/: __init__.py  __main__.py  advisories.py  analysis.py  api_cache.py  bib.py  call_log.py  cancellation.py  checksum.py  chunk.py  cite_tree.py  config.py  crossref.py  embed.py  errors.py  extract.py  figures.py  file_meta.py  filelock.py  find_text.py  git_diff.py  grep_raw.py  guide.py  hints.py  http.py  id_parser.py  identify.py  index.py  ingest.py  issues.py  latex.py  manifest.py  needful.py  notes.py  openalex.py  paths.py  prompt_injection.py  purgatory.py  rejected_dois.py  s2ag.py  (+13 more)
src/tome/docs/: configuration.md  directory-layout.md  doc-markers.md  doc-search.md  doc.md  document-analysis.md  exploration.md  getting-started.md  internals.md  needful.md  notes.md  paper-cite-graph.md  paper-figures.md  paper-id.md  paper-ingest.md  paper-metadata.md  paper-search.md  paper-workflow.md  paper.md  reporting-issues.md  review-cycle.md  search.md
tests/: conftest.py  test_advisories.py  test_analysis.py  test_api.py  test_api_cache.py  test_api_v2.py  test_bib.py  test_cancellation.py  test_checksum.py  test_chunk.py  test_chunk_semantic.py  test_cite_tree.py  test_concurrent_bib.py  test_config.py  test_crossref.py  test_disambiguate_key.py  test_discovery.py  test_doi_matching.py  test_embed.py  test_errors.py  test_extract.py  test_extract_enhanced.py  test_figures.py  test_file_meta.py  test_filelock.py  test_git_diff.py  test_grep_raw.py  test_guide.py  test_hints.py  test_http.py  test_id_parser.py  test_identify.py  test_index.py  test_ingest.py  test_issues.py  test_latex.py  test_manifest.py  test_needful.py  test_notes.py  test_openalex.py  (+16 more)
