[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tome-mcp"
version = "0.1.0"
description = "MCP server for managing a research paper library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Reto Stamm"},
]
maintainers = [
    {name = "Reto Stamm"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3.13",  # blocked on chromadb compatibility
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/retostamm/tome-mcp"
Repository = "https://github.com/retostamm/tome-mcp"
Issues = "https://github.com/retostamm/tome-mcp/issues"

[project.scripts]
tome-mcp = "tome.server:main"

dependencies = [
    "chromadb>=0.5.0",
    "PyMuPDF>=1.24.0",
    "bibtexparser>=2.0.0b1",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live external services (CrossRef, S2)",
]
filterwarnings = [
    "ignore::DeprecationWarning:onnxruntime",
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
    "ignore:legacy embedding function config:DeprecationWarning:chromadb",
]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
